--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#programs">Programs</a></li>
                     <li><a href="#admissions">Admissions</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
