changed the file

--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="history.css">
     </head>
     <body>
-        <!-- <div class="background-container"></div> -->
+        <div class="background-container"></div>
 
         <div class="history">
             <h1>The History of Capital Univeristy</h1>
