--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#programs">Programs</a></li>
                     <li><a href="#admissions">Admissions</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
