--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#programs">Programs</a></li>
+                    <li><a href="#program">Programs</a></li>
                     <li><a href="#admissions">Admissions</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
