added links to nav bar

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="container">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#program">Programs</a></li>
-                    <li><a href="#admissions">Admissions</a></li>
+                    <li><a href="programs.html">Programs</a></li>
+                    <li><a href="Admission.html">Admissions</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
