added student testmonials

--- a/About.html
+++ b/About.html
@@ -61,6 +61,28 @@
 
     </section>
 
+    <!-- Student Testimonials Section -->
+<section id="StudentTestimonials">
+    <h2>Student Testimonials</h2>
+    <div class="testimonial">
+        <img src="testmony1.png" alt="Student 1">
+        <p>"I absolutely love Capital University! The professors are knowledgeable, the campus is beautiful, and the opportunities for personal and academic growth are endless. It's been an incredible journey!"</p>
+    </div>
+    <div class="testimonial">
+        <img src="testmony2.jpg" alt="Student 2">
+        <p>"Choosing Capital University was one of the best decisions I've ever made. The supportive community, diverse student body, and innovative programs have enriched my college experience beyond measure."</p>
+    </div>
+    <div class="testimonial">
+        <img src="testmony3.avif" alt="Student 3">
+        <p>"Capital University has exceeded my expectations. The dedicated faculty and rigorous curriculum have prepared me for success in my chosen field. I'm proud to be a part of this institution."</p>
+    </div>
+    <div class="testimonial">
+        <img src="testmony4.avif" alt="Student 4">
+        <p>"I couldn't have asked for a better college experience. Capital University's commitment to academic excellence, combined with its vibrant campus life, has made these years unforgettable. I highly recommend it!"</p>
+    </div>
+</section>
+
+
 
 </body>
 </html>
