modified the page

--- a/Admission.html
+++ b/Admission.html
@@ -87,7 +87,15 @@
             <select id="program" name="program">
                 <option value="Computer Science">Computer Science</option>
                 <option value="Business Administration">Business Administration</option>
-                <option value="Psychology">Psychology</option>
+                <option value="Credential of Readiness">Credential of Readiness</option>
+                <option value="Economics for Managers">Economics for Managers</option>
+                <option value="Leadership Principles">Leadership Principles</option>
+                <option value="Launching Tech Ventures">Launching Tech Ventures</option>
+                <option value="Cybersecurity">Cybersecurity</option>
+                <option value="Telecommunication and Inforamtion Technology">Telecommunication and Inforamtion Technology</option>
+                <option value="Credential of Leadership, Impact and Management in Business (CLIMB)">Credential of Leadership, Impact and Management in Business (CLIMB)</option>
+                <option value="Disruptive Strategy">Disruptive Strategy</option>
+                <option value="Design Thinking and Innovation">Design Thinking and Innovation</option>
                 <!-- Add more program options here -->
             </select>
 
@@ -98,7 +106,7 @@
     <script>
         document.getElementById("admissionForm").addEventListener("submit", function(event) {
             event.preventDefault();
-           // Initialize EmailJS with your service ID
+           // Initialize EmailJS with  service ID
 emailjs.init("mqcoWw3uqZdda8_Xi");
 
 // Function to send the form data
