added a link to maps

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div id="footer3">
             <h2>Get In Touch</h2>
-            <p>Maps & Directions</p>
+            <a href="https://www.google.com/maps" style="color: azure; border-bottom: 2px dotted dodgerblue; text-decoration: none;">Maps</a>
             <p>Jobs</p>
             <P>Contact Us</P>
         </div>
