--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <address>
                 <p><strong>Address:</strong> 123 University Way, Capital City</p>
                 <p><strong>Phone:</strong> +1 (123) 456-7890</p>
-                <p><strong>Email:</strong> contact@capitaluniversity.edu</p>
+                <p><strong>Email:</strong> capitaluniversity098@gmail.com</p>
             </address>
         </section>
     </main>
