--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="cloud-container"></div>
+
+    <div class="image"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW1CLkY2WzMOjVsVotXa_WkuZN4dIFuGUo9Q&usqp=CAU" alt="" height="200px" width="200px" srcset=""></div>
     <div id="logo"><h1>Capital University</h1></div>
     <header>
         <nav>
