--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cloud-container"></div>
 
-    <div class="image"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW1CLkY2WzMOjVsVotXa_WkuZN4dIFuGUo9Q&usqp=CAU" alt="" height="200px" width="200px" srcset=""></div>
+    <div class="image"> <img src="https://o.remove.bg/downloads/985249a3-f68d-44ee-85ec-2e215b7d28f5/images-removebg-preview.png" alt="" height="200px" width="200px" srcset=""></div>
     <div id="logo"><h1>Capital University</h1></div>
     <header>
         <nav>
