--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <div class="image"> <img src="https://o.remove.bg/downloads/985249a3-f68d-44ee-85ec-2e215b7d28f5/images-removebg-preview.png" alt="" height="100px" width="100px" srcset=""></div>
     <div id="logo"><h1>Capital University</h1></div>
+    <div class="mission"><strong>MISSION:</strong> Empowering our students to fulfill their academic and professional passions in a University that is diverse, welcoming, and inclusive for all students, faculty, and staff.</div>
+     <DIV class="vission"><strong>VISSION:</strong> Creating innovative connections among education, humanities, music, the social sciences, science, engineering, and health science.</DIV>
     <header>
         <nav>
             <div class="container">
