Change the log source

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cloud-container"></div>
 
-    <div class="image"> <img src="c:\Users\Admin\Desktop\Moringa-Web\capital-06\school-website\school-website\school-website\log.png" alt="" height="100px" width="100px" srcset=""></div>
+    <div class="image"> <img src="https://www.capitaluniversity.edu.in/images/logowhite.png" alt="" height="100px" width="100px" srcset=""></div>
     <div id="logo"><h1>Capital University</h1></div>
     <div class="mission"><strong>MISION:</strong> Empowering our students to fulfill their academic and professional passions in a University that is diverse, welcoming, and inclusive for all students, faculty, and staff.</div>
      <DIV class="vission"><strong>VISION:</strong> Creating innovative connections among education, humanities, music, the social sciences, science, engineering, and health science.</DIV>
