made some changes on the margin of the university name

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <div class="image"> <img src="https://www.capitaluniversity.edu.in/images/logowhite.png" alt="" height="100px" width="100px" srcset=""></div>
     <div id="logo"><h1>Capital University</h1></div>
-    <div class="mission"><strong>MISION:</strong> Empowering our students to fulfill their academic and professional passions in a University that is diverse, welcoming, and inclusive for all students, faculty, and staff.</div>
-     <DIV class="vission"><strong>VISION:</strong> Creating innovative connections among education, humanities, music, the social sciences, science, engineering, and health science.</DIV>
+    <div class="mission"><strong>MISSION:</strong> Empowering our students to fulfill their academic and professional passions in a University that is diverse, welcoming, and inclusive for all students, faculty, and staff.</div>
+     <DIV class="vission"><strong>VISSION:</strong> Creating innovative connections among education, humanities, music, the social sciences, science, engineering, and health science.</DIV>
     <header>
         <nav>
             <div class="container">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="programs.html">Programs</a></li>
+                     <li><a href="programs.html">programs</a></li>
                     <li><a href="Admission.html">Admissions</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -29,6 +29,7 @@
     <div id="universityName"> <h1>Welcome To Capital University</h1>
     <p>Where world-class professors, innovative research, and a dynamic student community come together to advance education and foster change in the world.</p>
     </div>
+
     <div class="glance">
         <h2>Capital at Glance</h2>
         <div class="vertical-line"></div>
